# openenv-support-ticket-classifier-final

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
backend/: app.py  env.py  inference.py  llm_client.py  requirements.txt
frontend/: index.html  script.js
server/: app.py
