[project]
name = "support-ticket-classifier"
version = "0.1.0"
description = "OpenEnv support ticket classifier"
authors = [{ name = "Akshat" }]
dependencies = [
    "flask",
    "flask-cors",
    "requests",
    "pydantic",
    "pyyaml",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
